[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html

[dependencies]
add-one = { path = "../add-one" }
rand = "0.8.3"
